================================

Changes in behaviour not resulting in compilation errors, please read this!
---------------------------------------------------------------------------

Changes in behaviour which may result in compilation errors
-----------------------------------------------------------

Deprecated methods and their replacements
-----------------------------------------

Major new features in this release
----------------------------------


2.9.0
-----

All:

- Added wxEventBlocker class (Francesco Montorsi)
- Added wxFile/DirPickerCtrl::Get/SetFile/DirName() (Francesco Montorsi)
- Added wxSizerFlags::Top() and Bottom()
- Slovak translation added

wxGTK:

- Implemented support for underlined fonts in wxStaticText
- wxTopLevelWindow::SetSizeHints size increments now work
- wxTopLevelWindow::GetSize() returns the size including the WM decorations
- wxTopLevelWindow::GetClientSize() returns 0x0 when the window is minimized
- Added support for colour cursors (Pascal Monasse)

wxMSW:

- Fixed infinite loop in wxThread::Wait() in console applications
- Return the restored window size from GetSize() when window is minimized


2.8.2
-----

All:

- Added wxSizerFlags::Shaped() and FixedMinSize() methods
- Added wxCSConv::IsOk() (Manuel Martin)
- Added wxDateTime::GetDateOnly()
- Made wxTextFile work with unseekable files again (David Hart)
- Added wxCONFIG_USE_SUBDIR flag to wxFileConfig (Giuseppe Bilotta)
- Added wxSearchCtrl::[Get|Set]DescriptiveText

wxMSW

- Fix lack of spin control update event when control lost focus
- Corrected drawing of bitmaps for disabled menu items

wxMac

- Added support for the wxFRAME_FLOAT_ON_PARENT style

wxX11:

- Don't crash in wxWindow dtor if the window hadn't been really Create()d

wxUniv:

- Fixed wxComboBox always sorted


2.8.1
-----

All:

- Fix compilation with wxUSE_STL=1
- wxGrid::GetBestSize() returns same size the grid would have after AutoSize()